--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                             <div class="list-group">
                                 <a href="#" class="list-group-item list-group-item-action" id="sub">All</a>
 
-                                <a href="websiteo2\pro.html" class="list-group-item list-group-item-action list-group-item-action"
+                                <a href="#" class="list-group-item list-group-item-action list-group-item-action"
                                     id="sub">Areospace
                                     Engineering</a>
                                 <a href="#" class="list-group-item list-group-item-action list-group-item-action"
